--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,90 +10,179 @@ body {
     
     font-family: "Lato";
     font-weight: 300;
-    font-size: 16px;
     color: #555;
+    min-width: 480px;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+}
+
+.header{
+      min-height: 50px;
+}
+
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    text-align:left;
+}
+
+#logo{
+    margin-top: 15%;
+
+}
+
+#logo h1 {
+	font-size: 4.5em;
+	font-weight: 800;
+	letter-spacing: 0px;
+	color: #F48414;
+    margin: 0px 0px 0px 0px;
+}
+
+#logo h1 span{
+	font-size: 1.3em;
+}
+
+#logo h2 {
+	color: #c0c0c0;
+	font-weight: 400;
+    color: #fff;
+    margin: 0px 0px 0px 0px;
+    padding-left: 8.5em;
+}
+
+@media screen and (max-width: 768px) {
+    #logo h1 {
+        font-size: 3em;
+        font-weight: 600;
+    }
+
+    #logo h1 span{
+        font-size: 1.4em;
+    }
     
-    /*margin-top: 70px;*/
+    #logo h2 {
+        font-size: 1.6em;
+        padding-left: 7.5em;
+    }
+    
+    #logo-image {
+        max-width: 35%;
+    }
+}
+ 
+@media screen and (max-width: 568px) {
+    #logo h1 {
+        font-size: 3em;
+        font-weight: 600;
+    }
+
+    #logo h1 span{
+        font-size: 1.4em;
+    }
+    
+    #logo h2 {
+        font-size: 1.6em;
+        padding-left: 7.5em;
+    }
+    
+    #logo-image {
+        max-width: 40%;
+    }
 }
 
 
-.at-view-flip-out-vertical.ng-leave {
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -ms-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 20;
+#logo-image {
+    /*max-width: 23em;
+    width: 10%;
+    height: auto !important;
+    text-align:center;*/
+    height: auto !important;
+    max-width: 45%;
+    display: inline-block;
 }
 
-.at-view-flip-out-vertical.ng-leave-active {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -ms-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-    z-index: 10;
+/*a {
+    color: #42dca3;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
-.at-view-flip-in-vertical.ng-enter {
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    -o-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    -o-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition-property: -webkit-transform;
-    -moz-transition-property: -moz-transform;
-    -o-transition-property: -o-transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    -webkit-transform-origin: center center;
-    -moz-transform-origin: center center;
-    -ms-transform-origin: center center;
-    -o-transform-origin: center center;
-    transform-origin: center center;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 10;
+a:hover,
+a:focus {
+    text-decoration: none;
+    color: #1d9b6c;
+}*/
+
+.navbar-custom {
+    margin-bottom: 0;
+    /*border-bottom: 1px solid rgba(255,255,255,.3);*/
+    text-transform: uppercase;
+    background-color: rgba(0, 0, 0, 0.3);
 }
 
-.at-view-flip-in-vertical.ng-enter-active {
-    -webkit-transform: rotateX(0deg);
-    -moz-transform: rotateX(0deg);
-    -ms-transform: rotateX(0deg);
-    -o-transform: rotateX(0deg);
-    transform: rotateX(0deg);
-    z-index: 20;
+.navbar-custom .navbar-brand {
+    font-weight: 700;
+}
+
+.navbar-custom .navbar-brand:focus {
+    outline: 0;
+}
+
+.navbar-custom .navbar-brand .navbar-toggle {
+    padding: 4px 6px;
+    font-size: 16px;
+    color: #fff;
+}
+
+.navbar-custom .navbar-brand .navbar-toggle:focus,
+.navbar-custom .navbar-brand .navbar-toggle:active {
+    outline: 0;
+}
+
+.navbar-custom a {
+    
+    color: rgba(255,255,255,.8);
+}
+
+.navbar-custom .nav li a {
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
+}
+
+.navbar-custom .nav li a:hover {
+    outline: 0;
+    color: #fff;
+    background-color: transparent;
+}
+
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li a:active {
+    outline: 0;
+    background-color: transparent;
+}
+
+.navbar-custom .nav li.active {
+    outline: 0;
+}
+
+.navbar-custom .nav li.active a {
+    background-color: rgba(255,255,255,.3);
+}
+
+.navbar-custom .nav li.active a:hover {
+    color: #fff;
 }
