--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,14 @@
 <div class="row">
     <div class="col-lg-8 col-lg-offset-2 centered">
-        <img  id="logo" src="images/logo.png" class="img-responsive" alt="logo">
-        <div class="centered">
-            <h1><span>M</span>ALANDRACA</h1>
-            <h2>RADIO TANGO</h2>
+        <div id="logo">
+            <div class="centered">
+                <div id="logo-image" class="centered">
+                    <img src="images/logo.png" class="img-responsive" alt="logo">
+                </div>
+                <h1><span>M</span>ALANDRACA</h1>
+                <h2>RADIO DE TANGO</h2>
+            </div>
         </div>
     </div>
 </div>
+
