--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -2,10 +2,11 @@
     <div class="player">
         <div class="player-controls">
     <!--        <input width="50" id="volume" type="text" data-slider="true" value="50" data-slider-range="0,100" data-slider-step="1">-->
-            <input type="range" min="0" max="100" ng-model="player.volume" class="slider" />
-            <button class="play" role="button" tabindex="0" ng-click='play()'><span class="fa fa-play"></span>
+            <!--<input type="range" min="0" max="100" ng-model="player.volume" class="slider" />-->
+            <slider id="volume" data-slider-id="volume-slider" ng-model="player.volume" min="0" step="1" max="100"></slider>
+            <button class="play" role="button" tabindex="0" ng-click='play()' ng-hide="player.playing"><span class="fa fa-play"></span>
             </button>
-            <button class="stop hide" role="button" tabindex="0"><span class="fa fa-stop"></span>
+            <button class="stop" role="button" tabindex="0" ng-click='stop()' ng-show="player.playing"><span class="fa fa-stop"></span>
             </button>
 
         </div>
