--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,9 @@
-<div class="row">
+<div class="row" id="mainlogorow">
     <div class="col-lg-8 col-lg-offset-2 centered">
         <div id="logo">
             <div class="centered">
                 <div id="logo-image" class="centered">
-                    <img src="images/logo.png" class="img-responsive" alt="logo">
+                    <img src="images/logo.png" class="img-responsive" alt="malandraca logo">
                 </div>
                 <h1><span>M</span>ALANDRACA</h1>
                 <h2>RADIO DE TANGO</h2>
@@ -11,4 +11,3 @@
         </div>
     </div>
 </div>
-
